add swagger post with use definition
