# app/Http/Controllers/Swagger/PostController.php
@@ -7,6 +7,7 @@ use App\Models\Swagger\Post;
 use Illuminate\Http\Request;
 use Illuminate\Http\Response;
 use App\Transformers\Swagger\PostTransformer;
+use App\Validator\Swagger\PostValidator;
 
 /**
  * @SWG\Tags(
@@ -75,7 +76,15 @@ class PostController extends Controller
      *          response="200",
      * 			description="success",
      *          @SWG\Schema(ref="#/definitions/Post")
-     *      )
+     *      ),
+     *      @SWG\Response(
+     *         response="400",
+     *         description="Invalid ID supplied"
+     *      ),
+     *      @SWG\Response(
+     *         response="404",
+     *         description="Post not found"
+     *      ),
      * )
      */
     public function detail($id)
@@ -85,11 +94,135 @@ class PostController extends Controller
         return $this->item($detail, new PostTransformer());
     }
     
+    /**
+     * @SWG\Post(
+     *     path="/swagger/post",
+     *     tags={"Post"},
+     *     summary="Add a new post to the store",
+     *     @SWG\Parameter(
+     *         name="body",
+     *         in="body",
+     *         description="Post object that needs to be added to the store",
+     *         required=true,
+     *         @SWG\Schema(
+     *              @SWG\Property(property="title", type="string", description="Post title"),
+     *              @SWG\Property(property="content", type="string", description="Post content")
+     *          )
+     *     ),
+     *      @SWG\Response(
+     *          response="200",
+     * 			description="success",
+     *          @SWG\Schema(ref="#/definitions/Post")
+     *      ),
+     *     @SWG\Response(
+     *         response=405,
+     *         description="Invalid input",
+     *     ),
+     * )
+     */
     public function store()
     {
         $input = $this->request->all();
+        
         $post = $this->post->store($input);
 
         return $this->item($post, new PostTransformer());
+    }
+
+    /**
+     * @SWG\Put(
+     *     path="/swagger/post/{id}",
+     *     tags={"Post"},
+     *     summary="Update an existing post",
+     *     @SWG\Parameter(
+     *         description="Post Id",
+     *         in="path",
+     *         name="id",
+     *         required=true,
+     *         type="integer"
+     *      ),
+     *     @SWG\Parameter(
+     *         name="body",
+     *         in="body",
+     *         description="Post object that needs to be updated to the store",
+     *         required=true,
+     *         @SWG\Schema(
+     *              @SWG\Property(property="title", type="string", description="Post title"),
+     *              @SWG\Property(property="content", type="string", description="Post content")
+     *          )
+     *     ),
+     *      @SWG\Response(
+     *          response="200",
+     * 			description="success",
+     *          @SWG\Schema(ref="#/definitions/Post")
+     *      ),
+     *     @SWG\Response(
+     *         response=400,
+     *         description="Invalid ID supplied",
+     *     ),
+     *     @SWG\Response(
+     *         response=404,
+     *         description="Post not found",
+     *     ),
+     *      @SWG\Response(
+     *         response=422,
+     *         description="Validation exception",
+     *     ),
+     *     @SWG\Response(
+     *         response=405,
+     *         description="Validation exception",
+     *     ),
+     * )
+     */
+    public function update($id)
+    {
+        $input = $this->request->all();
+        $this->_validateInputPost($input);
+        $post = $this->post->updatePost($id, $input);
+
+        return $this->item($post, new PostTransformer());
+    }
+
+    private function _validateInputPost($input)
+    {
+        $validator = new PostValidator();
+        $validator->validate($input);
+    }
+
+    /**
+     * @SWG\Delete(
+     *     path="/swagger/post/{id}",
+     *     tags={"Post"},
+     *     summary="Delete a post",
+     *     @SWG\Parameter(
+     *         description="Post id to delete",
+     *         in="path",
+     *         name="id",
+     *         required=true,
+     *         type="integer"
+     *     ),
+     *      @SWG\Response(
+     *          response="200",
+     * 			description="Delete success"
+     *      ),
+     *     @SWG\Response(
+     *         response=400,
+     *         description="Invalid ID supplied"
+     *     ),
+     *     @SWG\Response(
+     *         response=404,
+     *         description="Post not found"
+     *     ),
+     * )
+     */
+    public function delete($id)
+    {
+        $post = $this->post->deletePost($id);
+
+        return response()->json([
+            "data" => [
+                'Delete success',
+            ],
+        ], Response::HTTP_OK);
     }
 }
